src/objects/Item_Specification__c.object
<CustomObject>
    <description>SBU: PREP &amp; ORTHO; Country: Japan - Used in Japan as a parallell product structure. This object is related to Item-object and a record of Item Specification is similar to a product in the product structure. 
Potentially this object will be removed and instead relate the products from the global product structure to the Item-object instead.</description>
    <fields>
        <fullName>Account_Group__c</fullName>
        <description>Ordered by Yoko</description>
        <label>Account Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bar_Code__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Bar Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Class_Category__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Class Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handling_Category__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Handling Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monopoly</fullName>
                </value>
                <value>
                    <fullName>Special Order</fullName>
                </value>
                <value>
                    <fullName>Custom Order</fullName>
                </value>
                <value>
                    <fullName>FS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_From_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBU: PREP, ORTH, Country Japan, This field controls the sharing rule and makes sure records with this field ticked is not shared with all users. Example of use case is a new product that has not yet been launched but added to the system.</description>
        <inlineHelpText>IF this checkbox is ticked this Item will not be visible to all the users.</inlineHelpText>
        <label>Hidden From Users?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Number_AX__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Item Number (AX)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Number_Catalogue__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Item Number (Catalogue)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SBU: PREP &amp; ORTHO; Country: Japan - Related to this Item</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan - Related to this Item</inlineHelpText>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Specifications</relationshipLabel>
        <relationshipName>Item_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JAN_Code__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>JAN Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JMDN_Code__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>JMDN Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kana__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Kana</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>OLD ID from the previous system.</description>
        <label>Legacy ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Manufacturer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monopoly_Dealer__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Monopoly Dealer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NonERPProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-ERP Product</label>
        <referenceTo>Non_ERP_Products__c</referenceTo>
        <relationshipLabel>Item Specifications</relationshipLabel>
        <relationshipName>Item_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pharmaceutical_Approval_Number__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Pharmaceutical Approval Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_per_Unit__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Quantity per Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remark_1__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Remark 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remark_2__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Remark 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remark_3__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Remark 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Replacements__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Replacements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Release_Date__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Sales Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shortened_Code__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Shortened Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan - Use to view by this order</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan - Use to view by this order</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specific_Maintenance__c</fullName>
        <label>Specific Maintenance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not In Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Status_Icon__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan - Need to update image when uploaded to salesforce</description>
        <formula>if(  ISPICKVAL(  Stock_Status__c , &quot;Stock Only&quot;) ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000001F4GO&quot;, &quot;Stock Only&quot;) 
,if(  ISPICKVAL( Stock_Status__c, &quot;End of Sales&quot;) ,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000001F4G9&quot;, &quot;End of Sales&quot;) 
,&quot;&quot;))</formula>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan - Need to update image when uploaded to salesforce</inlineHelpText>
        <label>Stock Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Status__c</fullName>
        <description>SBU: PREP &amp; ORTHO; Country: Japan</description>
        <inlineHelpText>SBU: PREP &amp; ORTHO; Country: Japan</inlineHelpText>
        <label>Stock Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Only</fullName>
                </value>
                <value>
                    <fullName>End of Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item Specification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Specification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Specifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>